namespaces/public/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-app-ingress
  namespace: public
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ping-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pong-app-service
            port:
              number: 80
